bonus part commit

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         </div>
     </main>
 
-    <section>
+    <section class="main container mx-auto p-3">
         <h3>How Does Javascript Work? </h3>
         <p>Javascript is a high-level programming language and single-threaded language. It is designed to control the
             behaviour of the website. Whenever we run a javascript program inside a web browser, javascript code is
